format document and optimize imports